<resources>
    <string name="app_name">Popular Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sort_popularity">Sort By Popularity</string>
    <string name="action_sort_rated">Sort By Rating</string>
    <string name="title_activity_movie_detail">Movie Details</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">Release Date</string>
    <string name="user_rating">User Rating</string>
    <string name="synopsis">Synopsis</string>
    <string name="chill_posters">Chill Posters</string>
    <string name="title_activity_review">Reviews</string>
    <string name="read_reviews">Read Reviews</string>
    <string name="favorites">Favorites</string>
    <string name="list_favorites">List Favorites</string>
    <string name="reviews">Reviews</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="no_movie_selected">No Movie Selected</string>
    <string name="share">Share</string>
    <string name="poster_description">Poster View</string>
</resources>
