<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="72dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/movie_title"
        android:id="@+id/movieTitle"
        android:gravity="center"
        android:background="#009688"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="30sp"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/moviePoster"
            android:padding="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/chill_posters" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:id="@+id/movieInfoBox"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/release_date"
                android:id="@+id/release_date"
                android:gravity="center"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/user_rating"
                android:id="@+id/user_rating"
                android:gravity="center"
                android:layout_gravity="center"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/read_reviews"
                android:text="@string/read_reviews"
                android:layout_gravity="center"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/favorites"
                android:id="@+id/favorites"
                android:layout_gravity="center"
                style="?android:attr/starStyle" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/synopsis"
        android:id="@+id/synopsis"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/separatorLine"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trailerListView"
        android:layout_gravity="center">
    </ListView>

</LinearLayout>
